--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "expo-font": "~12.0.8",
     "expo-image": "~1.12.12",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "~16.0.4",
     "expo-router": "~3.5.18",
     "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-symbols": "~0.1.4",
     "expo-system-ui": "~3.0.7",
     "expo-video": "^1.2.3",
     "expo-web-browser": "~13.0.3",
@@ -39,8 +39,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-media-library": "~16.0.4"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
